--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
+    "react-vis": "^1.11.7",
     "three": "^0.119.1",
     "vanta": "^0.5.16"
   },
